--- a/src/posts/published/what-are-magic-values/index.mdx
+++ b/src/posts/published/what-are-magic-values/index.mdx
@@ -4,12 +4,12 @@ slug: 'what-are-magic-values'
 title: 'What are &ldquo;Magic Values&rdquo;?'
 subtitle: null
 description: 'Learn what "magic values" are in programming and how to avoid them to improve the quality of your code.'
-excerpt: 'I recently did a code review for an aspring developer and instructed them to &ldquo;get rid of the &lsquo;magic values&rsquo; in their code.&rdquo; It dawned on me that it might not have been obvious what I meant, so I figured I would take a few moments, and paragraphs, to explain.'
+excerpt: 'I recently did a code review for an aspiring developer and instructed them to &ldquo;get rid of the &lsquo;magic values&rsquo; in their code.&rdquo; It dawned on me that it might not have been obvious what I meant, so I figured I would take a few moments, and paragraphs, to explain.'
 tags: ['JavaScript', 'Software Engineering']
 relatedPostsSlugs: []
 ---
 
-I recently did a code review for an aspring developer and instructed them to "get rid of the 'magic values' in their code." It dawned on me that it might not have been obvious what I meant, so I figured I would take a few moments, and paragraphs, to explain.
+I recently did a code review for an aspiring developer and instructed them to "get rid of the 'magic values' in their code." It dawned on me that it might not have been obvious what I meant, so I figured I would take a few moments, and paragraphs, to explain.
 
 **A "magic value" is a string or number used in a program that is essential to its proper function but provides no context or explanation for why it is what it is.** The best explanation is that it "magically" works.
 
