--- a/src/posts/published/whats-going-on-mid-2021/index.mdx
+++ b/src/posts/published/whats-going-on-mid-2021/index.mdx
@@ -3,42 +3,70 @@ date: '2021-06-28'
 slug: 'whats-going-on-mid-2021'
 title: "What's Going On?"
 subtitle: 'Mid 2021'
-description: ''
-excerpt: null
+description: 'A lot has happened for me in the first half of 2021 and I need to take a moment to try and process some of that.'
+excerpt: 'A lot has happened for me in the first half of 2021 and I need to take a moment to try and process some of that.'
 tags: ['Thoughts']
 relatedPostsSlugs: []
 ---
 
-**Disclaimer**: This post will not be published forever. What I will share here is not the kind of content I believe belongs long term on my blog. I will be archiving it at the end of July 2021.
+_**Disclaimer**: This post will not be published forever. What I will share here is not the kind of content I believe belongs on my blog for the long term. I will be archiving it at the end of July 2021._
 
 A lot has happened for me in the first half of 2021 and I need to take a moment to try and process some of that. I tend to get stuck in thought-loops when I keep things to myself, so this post is my attempt at externally processing what has transpired so far.
 
-### What happened at Webflow?
+### What has happened, briefly
 
-I left Webflow at the end of February. Up til now, only people within the company, and a very small group of people outside of the company know exactly _why_.
+At the end of February, I suddenly left Webflow to join Murmur. Up til now, only a handful of people know _why_ it happened the way it did. To understand, we have to go back to 2020.
 
-To understand the full context of the situation, it's important to understand what I was doing in 2020. I spent all of 2020 working as the only developer on a key feature for our users. <Marker content="I was given the task with the intention of having the opportunity to lead other engineers in making the improvements, but was then never provided other engineers, and thus, did all the work myself." /> I was tasked with updating and revamping Webflow's Assets tab. I'm proud of the improvements I made to that feature. I hope the users are happy as well. I did my best.
+For all of 2020, I was the only engineer working on a revamp of an important Webflow feature: the Assets manager. <Marker content="I was given the task with the intention of having the opportunity to lead other engineers in making the improvements, but was then never provided other engineers, and thus, did all the work myself." /> It was a lonely grind and not one I was terribly interested in. <Marker content="I don't really care about assets. Ever noticed how sparsely I use them around here?" /> Combine those factors with the complete inability to get my extroverted needs met due to the pandemic, I became very depressed.
 
-I was getting burned out and depressed about the project. I was lonely, grinding away at something that I didn't really have any interest in. I just don't care about assets. Have you ever noticed how sparse I am with them here? That's on purpose.
+You have to understand a few things about me to truly comprehend this situation. I have chronic depression and ADHD. I was diagnosed with both at the age of 10 and have struggled with them for essentially my entire life.
 
-As "reward" for my efforts, bringing a major revamp to a user requested feature all by myself, I was told in November 2020 that I was being reorganized and moved to the Growth team at the start of 2021. **This left a huge pit in my stomach.**
+One challenge I have with ADHD, in particular, is that I struggle with "executive function". If I do not find something interesting or urgent enough, it is agonizingly difficult for me to execute the task. It can often be so challenging to do a task, that attempts to do so will result in literal physical discomfort, anxiety and depression. <Marker content={`If you are neurotypical, then you need to understand this is not a matter of "will power", it is a neurological dysfunction that can't be willed away.`} /> This can often lead to a vicious cycle.
 
-The goals and purpose of the Growth team do not align at all with my principles and interests. <Marker content={`I would go into more detail, but I don't really feel like arguing about what essentially comes down to, "I'm different than you and care about different things," so I won't.`} /> I knew this, and I immediately made it clear to management that I did not want to join this team. Further still, there were other teams at Webflow that needed headcount that were more closely aligned with my interests. I asked that I get moved to there. I was told that wouldn't be possible. I was told that I should see this move to Growth as positive, that the company trusts something so important to their 5 key goals to me. That's not how I felt about it at at all.
+The work I did in the first ten months of 2020 had me moderately burnt out and depressed. It only got worse from there.
 
-I tried to keep my head up, but I knew that the work that was coming my way was going to depress me further, the depth and length of which was fundamentally unknowable. These unknown pains I knew were coming manifested in a lot of anxiety and depression. It got so bad that I started hearing things at night while I slept, frequently jumping out of bed because I thought people were breaking in. I was screaming in my dreams as I was fighting to be heard and listened to. It was very stressful.
+In November 2020, I was told that I was being moved to the Growth team in 2021 as part of a reorganization of the engineers. Without going into detail, the goals and mission of the Growth team did not align with my principles and goals. I knew that working on that team would lead to further depression and a decline in my productivity. I asked immediately to be moved to another team, one that more closely aligned with my goals and interests. I was denied.
 
-Soon enough, 2021 came around and I was moved to the Growth team. I can remember distinctly being in my first meeting with the team, being asked what I was excited about and flatly telling everyone the truth, "I am not excited. I do not want to be on this team. I requested to be moved the moment I was told I would be joining this team because this work does not align with my principles or goals. I was denied."
+For those two months leading into 2021, I became more depressed _and_ anxious over the future. I was being forced to endure an unknowable amount of depression for an unknowable length of time, with no guarantees that I would be moved from that team if and when the time came for another reorganization. It got so bad, that I began to have stress dreams, often screaming in my sleep.
 
-Let me tell you, people don't have a clue what to do when you tell them the truth.
+2021 came and just as I had said it would, the work for the new team depressed me and my productivity tanked. I had absolutely no interest in my work. I felt shitty about what we were building. Felt even worse about the goals of the team. It was going downhill fast.
 
-I was given an assignment, some onboarding feature that I didn't think much of and I tried my best to work. I couldn't muster shit, though. All this talk about "moving the needle" and "seeing a lift" was just bullshit to my ears. It wasn't a critical look at the data, it was number-seeking behavior with no grander vision of what was happening. I hated every moment of it. I dreaded work. My productivity ground to a halt.
+All the while, I continued to ask that I be moved to another team. I made it clear what working on this team was doing to me. That it was damaging my already garbage mental health. Everyone I told said nothing could be done. I felt impotent.
 
-All this time, I was still asking to be moved. That I knew I couldn't keep this up, I needed to do something I found more interesting and important. That I was depressed. I kept getting told, "The fastest we can move you is July." Do you know how painful it is to hear someone say, "I know you've been depressed for 3 months about this, and you're just going to have to continue feeling that way for another 5-6 months." It's demoralizing. Utterly demoralizing.
+Let me ask you: **just what the fuck are you supposed to do when you're told that your input and your mental health don't matter?**
 
-I didn't _want_ to leave Webflow. It was the best job I had had in my career. I enjoyed so many of my colleagues. I felt pretty good about the company as a whole. It was going reasonably well for 2 years and then this happened.
+I asked myself that question and could only come up with one answer: find another job. I lacked the mental fortitude to go through the rigamarole of technical interviewing, but I managed to find a new job through some good friends. It was the escape hatch I needed, and so I left Webflow and joined Murmur.
 
-**Just what the fuck are you supposed to do when you're told that your input doesn't matter and we don't care if you're depressed, that you need to keep going?**
+In hindsight, I joined Murmur too quickly. I joined right away because in America, health insurance is tied to employment and I needed to maintain coverage for my family. The initial energy spike of doing something novel got me through the first few weeks, but eventually it wore off, and I began to realize that things were not quite what I needed at Murmur.
 
-I did the only thing I could think to do. Start looking for escape hatches.
+I really struggled to match the energies of some of my Murmur teammates. Don't get me wrong, I enjoyed all of them. Two are some of my best friends and the others were great as well, but for whatever reason, our vibes just didn't mesh. Suffice it to say that we had different values and priorities. I wasn't getting what I wanted or needed and was unhappy for it, and they weren't getting the kind of engineer they deserve because of it.
 
-I wasn't in any mental state to go through the rigamarole of tech interviewing, but I got lucky. A few good friends were working at a small startup and wanted me to come on board. A few conversations later, and I was on to working for Murmur.
+Again, I found myself depressed and burnt out. I realized that I needed a break, and I needed to find something better suited for me. I turned in my resignation and left at the start of June. I've been trying to rest ever since (with mixed results).
+
+### What am I feeling?
+
+A lot of things, but one that comes back to me a lot is feeling broken. I feel like I lack whatever gene or trait others have that let's them find satisfying work and stay at it for a reasonable amount of time.
+
+It doubly sucks because there has never been a question of whether I'm skilled enough to do the work. Skill is not the issue. It's these situations where I end up with little to no control over what I do that I have so little tolerance for. I just don't have whatever others have that let's them put up with a less than ideal situation for as long as they do.
+
+### What are my plans?
+
+I don't fully know. Right now, I've taken June to try and rest. Admittedly, I think resting has taught me that rest isn't exactly what I need. Doing nothing all the time is overrated and boring (which can lead to other executive function issues). I don't want to overwork, either. What I want is meaningfulness and significance. I would like to feel like there's some purpose to waking up each day. I would love to face a work day without dread, unlike how I've felt for the last 18 months or so.
+
+I honestly am not sure what I will do going forward. I have some ideas, but struggling at the moment to get them going or across the finish line.
+
+I think I would like to work on a couple small courses and release them on my own. I'd like to prove to myself that I'm capable of generating at least _some_ income directly.
+
+I would consider also running some workshops based on that material. I think I could be pretty good at that.
+
+The main point of that work, though, is to create some additional revenue. I don't actually want to do teaching or workshops full time. While I enjoy it, it's not the kind of challenge that I want to work on day in and day out.
+
+I am unsure what I'll do for my main source of income. A part of me wants to work somewhere because it's the safest thing I can do, but I may run into many of these same problems again.
+
+Another part of me wants to start a business idea I have, but is fundamentally scared of trying to make something that risky work.
+
+If I'm being honest, I think I need to do some healing before I can really lean one way or the other. I just don't know if I'll heal as quickly as my budget will require. Such is life.
+
+### Conclusion
+
+That's what's happened to me in 2021 so far and what I'm up to now. I appreciate you reading this and letting me share my struggles. Thanks.
