--- a/src/posts/published/how-i-structure-my-react-projects/index.mdx
+++ b/src/posts/published/how-i-structure-my-react-projects/index.mdx
@@ -29,7 +29,7 @@ Recently, my friend Chance and I had this exchange on Twitter:
   charset="utf-8"
 ></script>
 
-It's true. It really doesn't matter. That said, I'm going to share a few of my preferences and why I they are what they are.
+It's true. It really doesn't matter. That said, I'm going to share a few of my preferences and why they are what they are.
 
 **Warning**: _These are my opinions. You don't have to agree with them. If you don't agree with them, that's ok. Just know, I'm not going to engage in an argument with you about these opinions._
 
