--- a/src/posts/published/whats-going-on-mid-2021/index.mdx
+++ b/src/posts/published/whats-going-on-mid-2021/index.mdx
@@ -45,9 +45,9 @@ Again, I found myself depressed and burnt out. I realized that I needed a break,
 
 ### What am I feeling?
 
-A lot of things, but one that comes back to me a lot is feeling broken. I feel like I lack whatever gene or trait others have that let's them find satisfying work and stay at it for a reasonable amount of time.
+A lot of things, but one that comes back to me a lot is feeling broken. I feel like I lack whatever gene or trait others have that lets them find satisfying work and stay at it for a reasonable amount of time.
 
-It doubly sucks because there has never been a question of whether I'm skilled enough to do the work. Skill is not the issue. It's these situations where I end up with little to no control over what I do that I have so little tolerance for. I just don't have whatever others have that let's them put up with a less than ideal situation for as long as they do.
+It doubly sucks because there has never been a question of whether I'm skilled enough to do the work. Skill is not the issue. It's these situations where I end up with little to no control over what I do that I have so little tolerance for. I just don't have whatever others have that lets them put up with a less than ideal situation for as long as they do.
 
 ### What are my plans?
 
