fix broken beard strokes on snippets

--- a/src/snippets/spacer.mdx
+++ b/src/snippets/spacer.mdx
@@ -2,7 +2,7 @@
 slug: 'spacer'
 name: 'Spacer'
 description: 'A component for easily applying margins with component composition'
-category: 'React'
+category: 'React Component'
 ---
 
 It is a mistake for reusable components to export their own margins. Doing so makes it difficult to compose them with other components to build up more complex ones. For more on this concept, I encourage you to read [Max Stoiber's article, "Margin considered harmful"](https://mxstbr.com/thoughts/margin/).
