--- a/src/posts/published/helpful-debugging-hooks/index.mdx
+++ b/src/posts/published/helpful-debugging-hooks/index.mdx
@@ -11,6 +11,16 @@ relatedPostsSlugs: []
 
 import ChangeExample from './ChangeExample'
 
+**Update 08/19/2021**: I created and published a package of these hooks so you can import them and use them without having to write them yourselves. Install them with:
+
+```
+npm install use-debugger-hooks
+```
+
+You can see the repo here: [https://github.com/kyleshevlin/use-debugger-hooks](https://github.com/kyleshevlin/use-debugger-hooks). Hope this helps you with your debugging!
+
+---
+
 Recently, I needed to do some debugging to improve a few components that were rerendering unexpectedly. In that process of research and trial & error, I came away with a few useful hooks that I want to share with you.
 
 In short, every time `props` or `state` changes in a React component, it will rerender. This is, unequivocally, a good thing. When a component is rendering more often than expected **and it's an actual performance problem for your app**, then you need to determine what `props`, `state` or other values are changing between renders. In order to do this, you first need a way of retaining the previous value of something.
@@ -31,10 +41,10 @@ function usePrevious(value) {
 
 This hook isn't new at all. In fact, you can find it in the [official React docs](https://reactjs.org/docs/hooks-faq.html#how-to-get-the-previous-props-or-state) as well as other places. This hook works because `useEffect` is always run _after_ render. So during the current render phase we get the previously stored value, then the `useEffect` runs to update the value. Pretty cool.
 
-Now that we can store a previous value, we want to determine if the current value and previous value are different, and if they are different, let's log that information out. To do so, let's create another custom hook: what I call `useChangeDebugger`:
+Now that we can store a previous value, we want to determine if the current value and previous value are different, and if they are different, let's log that information out. To do so, let's create another custom hook: what I call `useLogChanges`:
 
 ```javascript
-function useChangeDebugger(value) {
+function useLogChanges(value) {
   const previousValue = usePrevious(value)
   const changes = getChanges(previousValue, value)
 
@@ -78,11 +88,11 @@ function getChanges(previousValue, currentValue) {
 }
 ```
 
-Great. I pulled out the `getChanges` function since we really don't need the implementation details cluttering the `useChangeDebugger` hook. That reads simply enough now. You can pass this hook any value and log out changes with each render. We could do something like this to debug a component's `props` for example:
+Great. I pulled out the `getChanges` function since we really don't need the implementation details cluttering the `useLogChanges` hook. That reads simply enough now. You can pass this hook any value and log out changes with each render. We could do something like this to debug a component's `props` for example:
 
 ```jsx
 function MyComponent(props) {
-  useChangeDebugger(props)
+  useLogChanges(props)
 
   return <OtherComponent {...props} />
 }
@@ -90,19 +100,19 @@ function MyComponent(props) {
 
 Now, every time `MyComponent` rerenders, we will be informed what props changed that caused the rerender.
 
-Here's a very rudimentary example. This component just generates a random number and passes it to a child component every time you press the button. The child component uses `useChangeDebugger` on its `props`. The changes to the `props` will be logged out with each render. Open the console, and give it a try.
+Here's a very rudimentary example. This component just generates a random number and passes it to a child component every time you press the button. The child component uses `useLogChanges` on its `props`. The changes to the `props` will be logged out with each render. Open the console, and give it a try.
 
 <OffsetWrap>
   <ChangeExample />
 </OffsetWrap>
 
-But what about side effects? Can I also use `useChangeDebugger` to debug when effects run? Absolutely.
+But what about side effects? Can I also use `useLogChanges` to debug when effects run? Absolutely.
 
-Let's make use of `useChangeDebugger` inside a `useEffectDebugger` hook.
+Let's make use of `useLogChanges` inside a `useEffectDebugger` hook.
 
 ```javascript
 function useEffectDebugger(effect, dependencies) {
-  useChangeDebugger(dependencies)
+  useLogChanges(dependencies)
   React.useEffect(effect, dependencies)
 }
 ```
@@ -111,12 +121,12 @@ Now you have a drop in replacement for `useEffect` that will tell you which depe
 
 ```javascript
 function useCallbackDebugger(callback, dependencies) {
-  useChangeDebugger(dependencies)
+  useLogChanges(dependencies)
   return React.useCallback(callback, dependencies)
 }
 
 function useMemoDebugger(memoizer, dependencies) {
-  useChangeDebugger(dependencies)
+  useLogChanges(dependencies)
   return React.useMemo(memoizer, dependencies)
 }
 
