--- a/src/posts/published/dependency-injection-and-default-parameters/index.mdx
+++ b/src/posts/published/dependency-injection-and-default-parameters/index.mdx
@@ -23,7 +23,7 @@ function formatString(str) {
 }
 ```
 
-This is a simple, well named function. It _formats_ a string. But the part I want to focus on for a moment is use of `capitalize`. What is `capitalize` in this situation?
+This is a simple, well named function. It _formats_ a string. But the part I want to focus on for a moment is the use of `capitalize`. What is `capitalize` in this situation?
 
 It is a dependency.
 
@@ -88,7 +88,7 @@ I'm currently working on a course to help people understand `Array.reduce()` bet
 
 In the course, we do a _lot_ of exercises using `reduce` to build up our muscle memory. One of the more practical exercises is a `counts` function. It receives an array, and counts the items in the array based on some criteria. The question is, how do we determine the criteria for counting the items?
 
-In the case of primitive values, such as `Number`s, `String`s and `Boolean`s, the criteria is can be fairly simple: use the item itself. Let's start building this `counts` function, but with a `for` loop. Don't want to spoil all my course material:
+In the case of primitive values, such as `Number`s, `String`s and `Boolean`s, the criteria is fairly simple: use the item itself. Let's start building this `counts` function, but with a `for` loop. Don't want to spoil all my course material:
 
 ```javascript
 function counts(items) {
