--- a/src/posts/published/prefer-function-updaters-in-state-setters/index.mdx
+++ b/src/posts/published/prefer-function-updaters-in-state-setters/index.mdx
@@ -301,7 +301,7 @@ function useItemSelection(getKey = tryId) {
         })
       },
     }),
-    []
+    [getKey]
   )
 
   return [selectedItem, handlers]
