--- a/src/posts/published/prefer-function-updaters-in-state-setters/index.mdx
+++ b/src/posts/published/prefer-function-updaters-in-state-setters/index.mdx
@@ -4,7 +4,7 @@ slug: 'prefer-function-updaters-in-state-setters'
 title: 'Prefer Function Updaters in State Setters'
 subtitle: null
 description: 'React state can be updated in two ways: replace the `currentState` with the `nextState`, or transform the `currentState` to the `nextState` with a function. Prefer the function.'
-excerpt: 'React state can be updated in two ways: replace the `currentState` with the `nextState`, or transform the `currentState` to the `nextState` with a function. Prefer the function.'
+excerpt: 'React state can be updated in two ways: replace the <code>currentState</code> with the <code>nextState</code>, or transform the <code>currentState</code> to the <code>nextState</code> with a function. Prefer the function.'
 tags: ['React', 'JavaScript']
 relatedPostsSlugs: ['use-encapsulation', 'prefer-declarative-state-updaters']
 ---
