change tag for hooks to React Hooks

--- a/src/posts/published/break-out-your-component-logic-with-hooks/index.mdx
+++ b/src/posts/published/break-out-your-component-logic-with-hooks/index.mdx
@@ -3,7 +3,7 @@ date: '2020-05-19'
 slug: 'break-out-your-component-logic-with-hooks'
 title: 'Break Out Your Component Logic with Hooks'
 description: 'In this post, Kyle Shevlin demonstrates how to decouple the logic of a React component from its user interface through the use of a custom hook. This enables the encapsulation and reuse of a concern, contextualized for the particular use case.'
-tags: ['React', 'Hooks', 'Refactoring']
+tags: ['React', 'React Hooks', 'Refactoring']
 relatedPostsSlugs: []
 ---
 
