--- a/src/posts/published/conditional-react-hooks/index.mdx
+++ b/src/posts/published/conditional-react-hooks/index.mdx
@@ -5,7 +5,7 @@ title: 'Conditional React Hooks'
 subtitle: null
 description: 'Learn how to conditionally use React Hooks by conditionally rendering a "renderless component".'
 excerpt: Learn how to conditionally use React Hooks by conditionally rendering a "renderless component".
-tags: ['React', 'Hooks']
+tags: ['React', 'React Hooks']
 relatedPostsSlugs: ['renderless-components']
 ---
 
