--- a/src/posts/published/debounce-and-throttle-callbacks-with-react-hooks/index.mdx
+++ b/src/posts/published/debounce-and-throttle-callbacks-with-react-hooks/index.mdx
@@ -5,7 +5,7 @@ title: 'Debounce and Throttle Callbacks with React Hooks'
 subtitle: null
 description: 'Learn how to debounce or throttle a callback function with React hooks while avoiding an exhaustive deps ESLint error'
 excerpt: 'Learn how to debounce or throttle a callback function with React hooks while avoiding an exhaustive deps ESLint error'
-tags: ['React', 'Hooks']
+tags: ['React', 'React Hooks']
 relatedPostsSlugs: []
 ---
 
