--- a/src/posts/published/helpful-debugging-hooks/index.mdx
+++ b/src/posts/published/helpful-debugging-hooks/index.mdx
@@ -5,7 +5,7 @@ title: 'Helpful Debugging Hooks'
 subtitle: null
 description: 'Learn some helpful debugging hooks for improving React component performance.'
 excerpt: 'Recently, I needed to do some debugging to improve a few components that were rerendering unexpectedly. In that process of research and trial & error, I came away with a few useful hooks that I want to share with you.'
-tags: ['React', 'Hooks', 'JavaScript']
+tags: ['React', 'React Hooks', 'JavaScript']
 relatedPostsSlugs: []
 ---
 
