--- a/src/posts/published/how-to-use-react-context-effectively/index.mdx
+++ b/src/posts/published/how-to-use-react-context-effectively/index.mdx
@@ -5,7 +5,7 @@ title: 'How to Use React Context Effectively'
 subtitle: null
 description: 'Learn how to use React Context effectively in your web applications by using custom hooks and memoization.'
 excerpt: 'Learn how to use React Context effectively in your web applications by using custom hooks and memoization.'
-tags: ['React', 'Hooks', 'JavaScript']
+tags: ['React', 'React Hooks', 'JavaScript']
 relatedPostsSlugs: []
 ---
 
