--- a/src/posts/published/mental-model-of-use-effect/index.mdx
+++ b/src/posts/published/mental-model-of-use-effect/index.mdx
@@ -5,7 +5,7 @@ title: 'Mental Model of Use Effect'
 subtitle: null
 description: 'The React.useEffect hook can be challenging to get right. One way to easily mess it up is to incorrectly use the dependency array. This post demonstrates how to think about it correctly.'
 excerpt: null
-tags: ['JavaScript', 'React', 'Hooks']
+tags: ['JavaScript', 'React', 'React Hooks']
 relatedPostsSlugs: []
 ---
 
