--- a/src/posts/published/what-is-a-tuple/index.mdx
+++ b/src/posts/published/what-is-a-tuple/index.mdx
@@ -5,7 +5,7 @@ title: 'What is a Tuple?'
 subtitle: null
 description: 'Learn the concept of a tuple, an ordered, finite list of items that represents an implicit key/value store, and where you might already be using them in JavaScript.'
 excerpt: 'Learn the concept of a tuple, an ordered, finite list of items that represents an implicit key/value store, and where you might already be using them in JavaScript.'
-tags: ['JavaScript', 'React', 'Hooks']
+tags: ['JavaScript', 'React', 'React Hooks']
 relatedPostsSlugs: []
 ---
 
