--- a/src/posts/published/adding-infinite-states-to-our-use-reducer-finite-state-machine/index.mdx
+++ b/src/posts/published/adding-infinite-states-to-our-use-reducer-finite-state-machine/index.mdx
@@ -3,7 +3,7 @@ date: '2020-05-15'
 slug: 'adding-infinite-states-to-a-use-reducer-finite-state-machine'
 title: 'Adding Infinite States to a `useReducer` Finite State Machine'
 description: 'In this post, Kyle Shevlin explains how to store and update infinite state data in a finite state machine built upon the useReducer React Hook.'
-tags: ['React', 'Hooks', 'State Machines']
+tags: ['React', 'React Hooks', 'State Machines']
 relatedPostsSlugs:
   [
     'adding-guards-to-a-use-reducer-finite-state-machine',
