--- a/src/posts/published/mental-model-of-use-effect/index.mdx
+++ b/src/posts/published/mental-model-of-use-effect/index.mdx
@@ -2,7 +2,7 @@
 date: '2020-08-26'
 slug: 'mental-model-of-use-effect'
 title: 'Mental Model of Use Effect'
-subtitle: null
+subtitle: "or Don't Use the Dependencies Array as a Conditional"
 description: 'The React.useEffect hook can be challenging to get right. One way to easily mess it up is to incorrectly use the dependency array. This post demonstrates how to think about it correctly.'
 excerpt: null
 tags: ['JavaScript', 'React', 'React Hooks']
