fix related posts

--- a/src/posts/published/encapsulation/index.mdx
+++ b/src/posts/published/encapsulation/index.mdx
@@ -6,7 +6,7 @@ subtitle: 'or the Primary Purpose of Functions'
 description: 'Typically, functions are written for their reusability, but I want to convince you that the reason to reach for a function is to encapsulate a concern.'
 excerpt: 'Typically, functions are written for their reusability, but I want to convince you that the reason to reach for a function is to encapsulate a concern.'
 tags: ['JavaScript', 'React', 'Computer Science', 'Refactoring']
-relatedPostsSlugs: []
+relatedPostsSlugs: ['use-encapsulation']
 ---
 
 This post will be short and sweet, yet it is my sincere hope that after reading this blog post, you will think about functions a little differently than you did before.
