--- a/src/posts/published/enumerate-dont-booleanate/index.mdx
+++ b/src/posts/published/enumerate-dont-booleanate/index.mdx
@@ -11,6 +11,7 @@ relatedPostsSlugs:
     'adding-infinite-states-to-a-use-reducer-finite-state-machine',
     'can-a-state-machine-be-a-string',
     'guidelines-for-state-machines-and-xstate',
+    'discriminated-unions-and-destructuring-in-typescript',
   ]
 ---
 
