--- a/src/posts/published/renderless-components/index.mdx
+++ b/src/posts/published/renderless-components/index.mdx
@@ -6,6 +6,7 @@ subtitle: "or How Logic Doesn't Always Need a UI"
 title: 'Renderless Components'
 description: "Renderless components are a way to use React's component model for side effects and logic that isn't mapped directly to your UI"
 excerpt: "Renderless components are a way to use React's component model for side effects and logic that isn't mapped directly to your UI"
+relatedPostsSlugs: ['conditional-react-hooks']
 ---
 
 If you're using Redux with React, you are probably familiar with the concept of container and presentational components. If you are, you can skip ahead to the section [**Renderless Components**](#renderless-components). If you're not, let me give you a very brief description of each.
