--- a/src/posts/published/use-encapsulation/index.mdx
+++ b/src/posts/published/use-encapsulation/index.mdx
@@ -6,7 +6,8 @@ subtitle: 'or Why Your React Components Should Only Use Custom Hooks'
 description: 'Improve the quality of your codebase with encapsulation and custom React hooks.'
 excerpt: "If you're using React Hooks, I want to show you a pattern for using them that I think will improve the legibility and organization of your codebase. Let's apply encapsulation to the use of React Hooks."
 tags: ['JavaScript', 'React', 'React Hooks', 'Computer Science']
-relatedPostsSlugs: ['encapsulation']
+relatedPostsSlugs:
+  ['encapsulation', 'prefer-function-updaters-in-state-setters']
 ---
 
 import RelatedTweet from './RelatedTweet'
