--- a/src/posts/published/using-react-memo-to-avoid-unnecessary-rerenders/index.mdx
+++ b/src/posts/published/using-react-memo-to-avoid-unnecessary-rerenders/index.mdx
@@ -6,7 +6,7 @@ subtitle: null
 description: 'We can use the top level `React.memo` API to avoid unnecessary rerenders of our function components in a React app. In this post, Kyle Shevlin will teach you how it works.'
 excerpt: "If your component is a pure function, i.e. given the same inputs you get the same output, you can wrap the component in `React.memo` to prevent the component from rerendering if `props` haven't changed."
 tags: ['React', 'JavaScript']
-relatedPostsSlugs: ['memoization']
+relatedPostsSlugs: ['memoization', 'usememo-and-stable-values']
 ---
 
 import {
